# prog3-A2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
include/: widgets.hpp
src/: main.cpp  template.html  widgets.cpp
